--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,29 @@ footer>a {
     margin: 0 5px;
     text-decoration: none;
 }
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.grid {
+    display: grid;
+    width: fit-content;
+}
+
+.gameboard {
+    background-color: black;
+    grid-template-columns: repeat(3, 150px);
+    grid-template-rows: repeat(3, 150px);
+    gap: 2px;
+}
+
+.board-field {
+    font-size: 102pt;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rosybrown;
+}
