Handle click on the board - X added to field

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ main {
 }
 
 .gameboard {
+    margin-top: 3%;
     background-color: black;
     grid-template-columns: repeat(3, 150px);
     grid-template-rows: repeat(3, 150px);
