--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,23 @@ main {
     margin: 20px;
     justify-content: space-between;
 }
+
+.ask-name {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0);
+    /* fallback */
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+#name-form {
+    background-color: aliceblue;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
