--- a/styles.css
+++ b/styles.css
@@ -87,23 +87,28 @@ main {
     justify-content: space-between;
 }
 
-.ask-name {
+.modal {
     position: fixed;
     z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
+    /*fallback*/
+
     background-color: rgb(0, 0, 0);
-    /* fallback */
     background-color: rgba(0, 0, 0, 0.4);
 }
 
-#name-form {
+.modal-content {
     background-color: aliceblue;
     border-radius: 8px;
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
     width: fit-content;
+}
+
+.ask-name {
+    display: none;
 }
