--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,12 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-
 }
 
 body {
-    background: rosybrown;
+    background: url(./assets/wallpaper.jpg) no-repeat center fixed;
+    background-size: cover;
+
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -74,18 +75,24 @@ main {
 
 .gameboard {
     margin-top: 3%;
-    background-color: black;
     grid-template-columns: repeat(3, 150px);
     grid-template-rows: repeat(3, 150px);
-    gap: 2px;
 }
 
 .board-field {
     font-size: 102pt;
+    font-weight: 700;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rosybrown;
+}
+
+.border-right {
+    border-right: 2px solid black;
+}
+
+.border-bottom {
+    border-bottom: 2px solid black;
 }
 
 .players {
