--- a/styles.css
+++ b/styles.css
@@ -116,8 +116,12 @@ main {
     padding: 2px;
 }
 
-.pointer>img {
+#katana {
     max-width: 250px;
+}
+
+.wins>img {
+    max-width: 30px;
 }
 
 .reverted {
