Change font used to Orchidee

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Kayooh;
-    src: url(./assets/KayoohRegular-mLKyv.ttf) format("truetype")
+    src: url(./assets/OrchideeMedium.ttf) format("truetype")
 }
 
 html,
