Some fixes related to font display

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: Kayooh;
+    font-family: Orchidee;
     src: url(./assets/OrchideeMedium.ttf) format("truetype")
 }
 
@@ -7,7 +7,7 @@ html,
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Kayooh', 'Roboto', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: 'Orchidee', 'Roboto', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: xx-large;
 }
 
@@ -50,7 +50,7 @@ button {
     border-radius: 10px;
     background-color: beige;
     border: 1px solid salmon;
-    font-family: 'Kayooh', 'Roboto', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: 'Orchidee', 'Roboto', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: x-large;
 
 }
@@ -179,4 +179,9 @@ main {
         opacity: 0;
     }
 
+}
+
+span.required {
+    font-family: 'Roboto', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: xx-large;
 }
