--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Orchidee', 'Roboto', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: xx-large;
+    font-size: x-large;
 }
 
 body {
@@ -51,8 +51,7 @@ button {
     background-color: beige;
     border: 1px solid salmon;
     font-family: 'Orchidee', 'Roboto', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: x-large;
-
+    font-size: large;
 }
 
 button:hover {
@@ -167,7 +166,7 @@ main {
 }
 
 .round-winner {
-    min-height: 25px;
+    min-height: 30px;
 }
 
 @keyframes vanish {
@@ -183,5 +182,5 @@ main {
 
 span.required {
     font-family: 'Roboto', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: xx-large;
+    font-size: x-large;
 }
